sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value getNobreValeurs
  var ecart = getNobreValeurs() / 2
              ^